--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -268,7 +268,7 @@ bootstrap.min.css:5
 	line-height: 104px;
 	border: 3px solid #fff;
 	border-radius: 50%;
-	background-color: #f7c552;
+	background-color: #DAD4CD;
 }
 
 #about .service-item h4 {
