--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -276,7 +276,7 @@ bootstrap.min.css:5
 	margin-top: 45px;
 	font-size: 17px;
 	font-weight: 500;
-	color: #fff;
+	color: #000000;
 	letter-spacing: 1px;
 }
 
