--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -276,7 +276,7 @@ bootstrap.min.css:5
 	margin-top: 45px;
 	font-size: 17px;
 	font-weight: 500;
-	color: #000000;
+	color: #DAD4CD;
 	letter-spacing: 1px;
 }
 
@@ -287,7 +287,7 @@ bootstrap.min.css:5
 }
 
 #about .service-item p {
-	color: #000000;
+	color: #DAD4CD;
 	margin-top: 30px;
 }
 
