--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -349,7 +349,7 @@ bootstrap.min.css:5
 	font-size: 20px;
 	text-transform: uppercase;
 	font-weight: 700;
-	color: #fff;
+	color: #836E57;
 	letter-spacing: 1px;
 }
 
@@ -361,7 +361,7 @@ bootstrap.min.css:5
 }
 
 #portfolio .section-heading p {
-	color: #fff;
+	color: #836E57;
 	padding-right: 70px;
 }
 
@@ -595,7 +595,7 @@ bootstrap.min.css:5
 
 #contact button {
   display: inline-block;
-	background-color: #f7c552;
+	background-color: #DAD4CD;
 	font-size: 13px;
 	padding: 12px 18px;
 	color: #fff;
