--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -514,11 +514,11 @@ bootstrap.min.css:5
 }
 .tabgroup .text-content span {
 	font-size: 13px;
-	color: #33c1cf;
+	color: #836E57;
 }
 .tabgroup .text-content a {
 	font-size: 13px;
-	color: #33c1cf;
+	color: #836E57;
 	text-decoration: none;
 }
 .tabgroup .text-content p {
