--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -542,7 +542,7 @@ bootstrap.min.css:5
 	font-size: 20px;
 	text-transform: uppercase;
 	font-weight: 700;
-	color: #fff;
+	color: #836E57;
 	letter-spacing: 1px;
 }
 
