--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -241,6 +241,7 @@ bootstrap.min.css:5
 	font-size: 14px;
 	line-height: 24px;
 	padding: 0px 25%;
+	text-shadow: #000000 0.1em 0.1em 0.2em
 }
 
 .baner-content .text-content .primary-white-button {
