footer color text

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -740,6 +740,7 @@ footer .contact-info ul li {
 footer .contact-info ul li em {
 	font-style: normal;
 	font-weight: 500;
+	color: #fff;
 }
 
 footer .connect-us h4 {
