--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -351,7 +351,7 @@ bootstrap.min.css:5
 	font-size: 20px;
 	text-transform: uppercase;
 	font-weight: 700;
-	color: #fff;
+	color: #836e57;
 	letter-spacing: 1px;
 }
 
@@ -363,7 +363,7 @@ bootstrap.min.css:5
 }
 
 #portfolio .section-heading p {
-	color: #fff;
+	color: #836e57;
 	padding-right: 70px;
 }
 
@@ -544,7 +544,7 @@ bootstrap.min.css:5
 	font-size: 20px;
 	text-transform: uppercase;
 	font-weight: 700;
-	color: #836E57;
+	color: #fff;
 	letter-spacing: 1px;
 }
 
@@ -787,7 +787,7 @@ footer .connect-us ul li a {
 		text-align: center;
 		padding-top: 100px;
 		padding-bottom: 100px;
-		background-color: #596065;
+		background-color: #7a7a7a;
 		height: 505px;
 		margin-left: -15px;
 		padding-left: 0vh;
