--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -787,7 +787,7 @@ footer .connect-us ul li a {
 		text-align: center;
 		padding-top: 100px;
 		padding-bottom: 100px;
-		background-color: #7a7a7a;
+		background-color: rgb(122, 122, 122);
 		height: 505px;
 		margin-left: -15px;
 		padding-left: 0vh;
